# simple-inject-py

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: release.yml
src/simple_inject/: __init__.py  core.py
tests/: test_all.py  test_auto_inject.py  test_readme.py
