[project]
name = "simple-inject"
version = "0.1.0"
description = "A lightweight dependency injection library for Python"
authors = [{ name = "frostime", email = "frostime@foxmail.com" }]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }
keywords = ["dependency injection", "DI", "IoC", "inversion of control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/frostime/simple-inject"
"Bug Tracker" = "https://github.com/frostime/simple-inject/issues"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
test = "pytest tests/"


[tool.pdm.dev-dependencies]
dev = ["pytest>=8.3.3", "pylint>=3.2.7"]
